Fixed textareas overlapping other items.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -109,7 +109,7 @@ li.item_for_node {
 
 .item_for_node > .body {
 	width: 100%;
-	height: 1.5em;
+	min-height: 1.5em;
 }
 
 
@@ -353,6 +353,8 @@ ul.scope-list > li.scope-item {
 	padding: 2px;
 	vertical-align: top;
 	
+	margin-bottom: 0.5em;
+	
 	border-radius:			4px;
 	-moz-border-radius:		4px;
 	-webkit-border-radius:	4px;
@@ -361,7 +363,8 @@ ul.scope-list > li.scope-item {
 	-moz-box-shadow:	0 1.333px 2px rgba(0, 0, 0, 0.25);
 	-webkit-box-shadow:	0 1.333px 2px rgba(0, 0, 0, 0.25);
 }
-.show.note.prop, .edit.note.prop textarea { height: 1em; line-height: 1.25em; }
+.show.note.prop, .edit.note.prop textarea { line-height: 1.25em; }
+.edit.note.prop textarea { height: 1em; }
 
 .priority.prop {
 	font-weight: bold;
